Add abtest related and gpu back

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,5 @@ bitsandbytes==0.37.2
 git+https://github.com/huggingface/peft@e536616888d51b453ed354a6f1e243fecb02ea08
 gradio
 appdirs
+triton==2.0.0
 texttable
